issue129 Changed titles

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -12,7 +12,7 @@
 					class="bg-primary text-white text-xs font-bold px-6 py-2 rounded-l-xl rounded-r-md shadow-md uppercase tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:bg-accent before:rounded-l-lg before:shadow-sm"
 					style="box-shadow: 2px 4px 12px 0 #0126471a"
 				>
-					IVOA News & Upcoming Meetings
+					Newsletters
 				</span>
 			</div>
 
@@ -38,7 +38,7 @@
 					class="bg-primary text-white text-xs font-bold px-6 py-2 rounded-l-xl rounded-r-md shadow-md uppercase tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:bg-accent before:rounded-l-lg before:shadow-sm"
 					style="box-shadow: 2px 4px 12px 0 #0126471a"
 				>
-					IVOA Members Posts
+					Members Posts
 				</span>
 			</div>
 
