issue129 Addressing requests

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -9,36 +9,10 @@
 		<div class="bg-white rounded-sm shadow-md mt-4 p-1 max-w-content mx-auto">
 			<div class="relative inline-block">
 				<span
-					class="bg-primary text-white text-xs font-bold px-6 py-2 rounded-l-xl rounded-r-md shadow-md uppercase tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:bg-accent before:rounded-l-lg before:shadow-sm"
+					class="bg-primary text-white text-xs font-bold px-6 py-2 shadow-md tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:rounded-l-lg before:shadow-sm"
 					style="box-shadow: 2px 4px 12px 0 #0126471a"
 				>
-					Newsletters
-				</span>
-			</div>
-
-			<div class="mt-4">
-				<ul class="list-disc pl-6 space-y-2">
-					{{ range first 3 (where .Site.Pages "Params.tags" "intersect" (slice
-					"news")) }}
-					<li>
-						<a
-							href="{{ .RelPermalink }}"
-							class="text-primary hover:text-accent font-semibold transition"
-						>
-							{{ .Title }}
-						</a>
-					</li>
-					{{ end }}
-				</ul>
-			</div>
-		</div>
-		<div class="bg-white rounded-sm shadow-md mt-4 p-1 max-w-content mx-auto">
-			<div class="relative inline-block">
-				<span
-					class="bg-primary text-white text-xs font-bold px-6 py-2 rounded-l-xl rounded-r-md shadow-md uppercase tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:bg-accent before:rounded-l-lg before:shadow-sm"
-					style="box-shadow: 2px 4px 12px 0 #0126471a"
-				>
-					Members Posts
+					Posts
 				</span>
 			</div>
 
