issue129 Adjusting styles

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -23,7 +23,7 @@
 					<li>
 						<a
 							href="{{ .RelPermalink }}"
-							class="text-primary hover:text-accent font-semibold transition"
+							class="font-semibold transition"
 						>
 							{{ .Title }}
 						</a>
