--- a/layouts/home.html
+++ b/layouts/home.html
@@ -6,11 +6,10 @@
 
 	<aside class="right cards w-full md:w-1/3">
 		{{/* Sidebar takes full width on small, 1/3 on larger */}}
-		<div class="bg-white rounded-sm shadow-md mt-4 p-1 max-w-content mx-auto">
+		<div class="bg-white mt-4 p-1 max-w-content mx-auto">
 			<div class="relative inline-block">
-				<a href='{{ "/news/" | relURL }}'
-					class="text-black text-lg font-bold px-6 py-2 shadow-md tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:rounded-l-lg before:shadow-sm"
-					style="box-shadow: 2px 4px 12px 0 #0126471a"
+				<a href='{{ "/news/" | absURL }}'
+					class="text-black text-lg font-bold px-6 py-2 tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:rounded-l-lg"
 				>
 					News
 				</a>
@@ -27,7 +26,13 @@
 						>
 							{{ .Title }}
 						</a>
+						<div class="flex items-center gap-2 my-5">
+							<hr class="flex-grow border-t border-accent-hover">
+							<span class="text-[6px] text-accent-hover leading-none">★</span>
+							<hr class="flex-grow border-t border-accent-hover">
+						</div>
 					</li>
+
 					{{ end }}
 				</ul>
 			</div>
