issue129 Fixing the new url

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -8,7 +8,7 @@
 		{{/* Sidebar takes full width on small, 1/3 on larger */}}
 		<div class="bg-white mt-4 p-1 max-w-content mx-auto">
 			<div class="relative inline-block">
-				<a href='{{ "/news/" | absURL }}'
+				<a href='{{ .Site.Home.Permalink}}news/'
 					class="text-black text-lg font-bold px-6 py-2 tracking-wide before:content-[''] before:absolute before:-left-4 before:top-1/2 before:-translate-y-1/2 before:w-4 before:h-4 before:rounded-l-lg"
 				>
 					News
